--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam iste tempora recusandae dolores corrupti soluta exercitationem pariatur sapiente adipisci beatae. Dolores itaque consequatur molestiae magni impedit voluptatibus! Assumenda, similique quis.</p>
 </body>
 <h2 id="header">this is by using ID</h2>
-<button id="btn">i am the new button</button>
+<button id="btn" onclick="showAlert()">i am the new button</button>
 
 <ul>
     <li>rice</li>
