--- a/index.html
+++ b/index.html
@@ -4,23 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Testing</h1>
-    <div class="black"></div>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam iste tempora recusandae dolores corrupti soluta exercitationem pariatur sapiente adipisci beatae. Dolores itaque consequatur molestiae magni impedit voluptatibus! Assumenda, similique quis.</p>
-</body>
-<h2 id="header">this is by using ID</h2>
-<button id="btn" onclick="showAlert()">i am the new button</button>
+    
 
-<ul>
-    <li>rice</li>
-    <li>tomato</li>
-    <li>spring onions</li>
-    <li>carrots</li>
-    <li>salts</li>
-    <li>green peas</li>
-</ul>
-<script src="./script.js"></script>
+    <h1 >OPEN</h1>
+    <button id="change">CLICK mE</button>
+
+
+    <script src="script.js"></script>
+</body>
 </html>
